<resources>
    <string name="app_name">EndometriosisMonitoring</string>
    <string name="facebook_application_id">2480841702131407</string>
    <string name="fb_login_protocol_scheme">fb2480841702131407</string>
    <string name="dashboard">Dashboard</string>
    <string name="treatment">Treatment</string>
    <string name="fertility">Fertility</string>
    <string name="doctor">Doctor</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="doctor_info">Doctor\'s information</string>
    <string name="my_pain">My pain</string>
    <string name="anonymous">Anonymous</string>
    <string name="cancel_auth">You have cancelled the authentification process. Please try again.</string>
    <string name="no_network">You need a network access to login</string>
    <string name="unknown_error">An unknown error has occurred. Please try again</string>
    <string name="evolution_of_pain_over_the_last_7_days">Evolution of pain over the last 7 days</string>
    <string name="recurrence_of_symptoms_over_the_last_7_days">Recurrence of symptoms over the last 7 days</string>
    <string name="practiced_activities_over_last_7_days">Practiced activities over last 7 days</string>
    <string name="sleep_quality_over_the_7_last_days">Sleep quality over the 7 last days</string>
    <string name="mood_repartition_over_the_7_last_days">Mood repartition over the 7 last days</string>
    <string name="pain_history">Your pain history will appear here</string>
    <string name="symptoms_history">Your symptoms history will appear here</string>
    <string name="action_history">Your activities history will appear here</string>
    <string name="sleep_history">Your sleep quality will appear here</string>
    <string name="mood_history">Your mood history will appear here</string>
    <string name="burns">Burns</string>
    <string name="cramps">Cramps</string>
    <string name="bleeding">Bleeding</string>
    <string name="fever">Fever</string>
    <string name="chills">Chills</string>
    <string name="bloating">Bloating</string>
    <string name="hot_flush">HotFlush</string>
    <string name="diarrhea">Diarrhea</string>
    <string name="constipation">Constipation</string>
    <string name="nausea">Nausea</string>
    <string name="tired">Tired</string>
    <string name="sleep">Sleep</string>
    <string name="sleep_quality">Sleep quality</string>
    <string-array name="sport">
        <item>BasketBall</item>
        <item>Bike</item>
        <item>Climbing</item>
        <item>Combat sport</item>
        <item>Dance</item>
        <item>Fencing</item>
        <item>Fitness</item>
        <item>Football</item>
        <item>Gymnastic</item>
        <item>HandBall</item>
        <item>Horse riding</item>
        <item>Rugby</item>
        <item>Running</item>
        <item>Swimming</item>
        <item>Tennis</item>
        <item>Volleyball</item>
        <item>Walking</item>
        <item>Yoga</item>
    </string-array>
    <string name="stress">Stress</string>
    <string name="relaxation">Relaxation</string>
    <string name="sex">Sex</string>
    <string name="sex_duration">Sex duration</string>
    <string name="nb_sex">Number of sexual intercourse</string>
    <string name="sex_intensity">Sex intensity</string>
    <string name="stress_intensity">Stress Intensity</string>
    <string name="stress_exposure">Number of stress exposure</string>
    <string name="relax_duration">Relaxation duration</string>
    <string name="nb_relax">Number of relaxing activities performed</string>
    <string name="sport_duration">Sport duration</string>
    <string name="sport_intensity">Sport intensity</string>
    <string name="nb_sport">number of sports activities practiced</string>
    <string name="sad">Sad</string>
    <string name="sick">Sick</string>
    <string name="irritated">Irritated</string>
    <string name="happy">Happy</string>
    <string name="very_happy">Very happy</string>
    <string name="save">Save</string>
    <string name="mood">Mood</string>
    <string name="vagina">Vagina</string>
    <string name="breast">Breast</string>
    <string name="intestine">Intestine</string>
    <string name="head">Head</string>
    <string name="back">Back</string>
    <string name="bladder">Bladder</string>
    <string name="lower_abdomen">Lower abdomen</string>
    <string name="on_a_scale_of_0_to_10_how_do_you_rate_the_pain_today">On a scale of 0 to 10, how do you rate the pain today?</string>
    <string name="where_do_you_mainly_find_pain">Where do you mainly find pain</string>
    <string name="what_are_the_main_symptoms">What are the main symptoms</string>
    <string name="activities">Activities</string>
    <string name="what_have_you_done_today_and_what_are_the_factors_that_can_cause_pain">What have you done today and what are the factors that can cause pain?</string>
    <string name="with_what_intensity_on_a_scale_to_0_from_10">With what intensity on a scale to 0 from 10</string>
    <string name="how_long_in_minutes">How long in minutes</string>
    <string name="what_activities_did_you_practiced">What activities did you practiced</string>
    <string name="some_precisions_please">Some precisions please</string>
    <string name="stress_intensity_scale">With what intensity on a scale of 1 to 10</string>
    <string name="sleep_quality_rate">How you rate your sleep quality today</string>
    <string name="cancel">Cancel</string>
    <string name="your_contraceptive_pill">Your contraceptive pill</string>
    <string name="the_first_day_of_your_last_menstruation">The first day of your last menstruation</string>
    <string name="the_time_you_want_to_be_notified_of_taking_your_pill">The time you want to be notified of taking your pill</string>
    <string name="others_treatments">Others treatments</string>
    <string name="a_tablet_of_pills">a tablet of pills</string>
    <string name="an_add_button_image">An add button image</string>
    <string name="delete_hour">Delete the hour</string>
    <string name="forget_pill">Don\'t forget, it\'s time to take your pill</string>
    <string name="check_pill">Check the according pill in the Treatment screen</string>
    <string name="forget_treatment">Don\'t forget, it\'s time to take %1$s</string>
    <string name="you_must_take">You must take %1$s %2$s</string>
    <string name="add_a_treatment">Add a treatment</string>
    <string name="name_of_the_medicament">Name of the medicament</string>
    <string name="duration_of_the_treatment">Duration of the treatment</string>
    <string name="what_is_the_dosage">What is the dosage?</string>
    <string-array name="conditioning">
        <item>tablets</item>
        <item>spoon</item>
        <item>milliliters</item>
        <item>milligrams</item>
    </string-array>
    <string name="morning">Morning</string>
    <string name="noon">Noon</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="permanent">Permanent</string>
    <string name="enter_medicament_name">Please enter the medicament name</string>
    <string name="enter_medicament_dosage">Please enter the medicament dosage</string>
    <string name="enter_medicament_conditioning">Please enter the medicament conditioning</string>
    <string name="delete_button_icon">Delete button icon</string>
    <string name="dosage">Dosage</string>
    <string-array name="duration">
        <item>Permanent</item>
        <item>1 day</item>
        <item>2 days</item>
        <item>3 days</item>
        <item>4 days</item>
        <item>5 days</item>
        <item>6 days</item>
        <item>7 days</item>
        <item>8 days</item>
        <item>9 days</item>
        <item>10 days</item>
        <item>11 days</item>
        <item>12 days</item>
        <item>13 days</item>
        <item>14 days</item>
        <item>15 days</item>
        <item>Permanent</item>
    </string-array>
    <string name="picking_hours">Picking hours</string>
    <string name="dosage_condi">%1$s %2$s</string>
    <string name="until_the">Until the %1$s</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thurday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="menstruation">Menstruation</string>
    <string name="ovulation">Ovulation</string>
    <string name="optimal_fertilization">Optimal fertilization</string>
    <string name="the_duration_of_your_cycle_menstruation">The duration of your cycle menstruation</string>
    <string name="see_my_cycle">See my cycle</string>
    <string name="body_temperature_monitoring">Body temperature monitoring</string>
    <string name="for_more_precision_you_have_the_possibility_to_record_your_body_temperature_daily_to_see_precisely_your_ovulation_period">For more precision you have the possibility to record your body temperature daily to see precisely your ovulation period</string>
    <string name="save_my_temperature">Save my temperature</string>
    <string name="cycle_between">Your cycle must be between 15 and 48 days</string>
    <string name="enter_duration_cycle">Please enter your duration cycle</string>
    <string name="entre_previous_cycle">Please enter the first day of your previous cycle</string>
    <string name="temp_legend">%1$d °</string>
    <string name="body_temp">My body temperature</string>
    <string name="in_which_city_are_you_looking_for_a_doctor">In which city are you looking for a doctor?</string>
    <string name="gynecologist">Gynecologist</string>
    <string name="general_practitioner">General practitioner</string>
    <string name="around_me">Around me</string>
    <string name="doctor_rationale">We need this permissions to locate you and display all doctors around your position</string>
    <string name="search">Search</string>
    <string name="view_more_details">View more details</string>
    <string name="comment_doctor">%1$d commentaries</string>
    <string name="no_commentaries">There is no commentaries yet</string>
    <string name="commentaries">Commentaries</string>
    <string name="medical_procedures">Medical procedures</string>
    <string name="types_of_medical_procedures">Types of medical procedures</string>
    <string name="phone_number">Phone number:</string>
    <string name="address">Address:</string>
    <string name="speciality">Speciality:</string>
    <string name="sex_details">Sex:</string>
    <string name="click_here_to_reset_all_the_notification_this_action_delete_all_your_treatment_input_and_your_cycle_input">Click here to reset all the notification. This action delete all your treatment input and your cycle input</string>
    <string name="reset_notification">Reset notification</string>
    <string name="reset_pain_values">Reset all values</string>
    <string name="clear_here_to_reset_all_pain_values">Clear here to reset all pain values</string>
    <string name="click_here_to_reset_all_sleep_values">Click here to reset all sleep values</string>
    <string name="reset_sleep_values">Reset Sleep values</string>
    <string name="reset_symptoms_values">Reset symptoms values</string>
    <string name="click_here_to_reset_all_the_symptoms_values">Click here to reset all the symptoms values</string>
    <string name="reset_activities_values">Reset activities values</string>
    <string name="click_here_to_reset_all_activities_values">Click here to reset all activities values</string>
    <string name="click_here_to_reset_all_mood_values">Click here to reset all mood values</string>
    <string name="reset_mood_values">Reset mood values</string>
    <string name="reset_temperature_values">Reset temperature values</string>
    <string name="click_here_to_reset_all_temperatures_values">Click here to reset all temperatures values</string>
</resources>